--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div id="fixedDiv">
             Soon you will find an amazing website here. <br>
-            <p>In the mean time you can check my <a href="https:/www.wilsonromero.design/art" target="_blank"><strong>Artwork Portfolio [beta]</strong></a></p>
+            <p>In the mean time you can check my <a href="/art" target="_blank"><strong>Artwork Portfolio [beta]</strong></a></p>
             &copy; Wilson Romero 2019
     </div>    
 </body>
